# gurdy_ml

./: CMakeLists.txt  README.md  gurdy_qtable_6legs.pkl  package.xml  plotter_config.yaml
config/: algorithm_comparison.yaml  algorithm_params.yaml  combined_rl_params.yaml  comparison_params.yaml  gurdy_control.yaml  gurdy_open_ai_params.yaml  params.yaml  params_dqn.yaml  params_policy_gradient.yaml  params_ppo.yaml  params_sac.yaml  params_sarsa.yaml  plotter_config.yaml  rl_comparison_config.yaml  rl_config.yaml  rl_params.yaml
launch/: compare_algorithms.launch  comparison_plotter.launch  dqn_algorithm.launch  full_launch.launch  gurdy_control.launch  launch_all_algorithms.launch  launch_all_algorithms_fixed.launch  launch_all_algorithms_fixed2.launch  launch_dqn.launch  launch_sarsa.launch  one_touch_spawn_control.launch  policy_gradient.launch  policy_gradient_algorithm.launch  ppo_algorithm.launch  ppo_launch.launch  qlearn_algorithm.launch  rl_comparison.launch  rl_comparison_launch.launch  run_all_algorithms.launch  rviz.launch  sac_algorithm.launch  sac_launch.launch  sarsa_algorithm.launch  sarsa_visualization_launch.launch  simple_rl_comparison.launch  spawn_gurdy.launch  spawn_unique_controllers.launch  start_controllers.launch  start_training_qlearn.launch  test_gurdy.launch  train_gurdy.launch
msg/: CMakeLists.txt  package.xml
output/: gurdy_qlearn_model_100.pkl  gurdy_qlearn_model_final.pkl
results/: qlearn_log.txt  sarsa_data.pkl  sarsa_log.txt
robot/: gurdy.xacro
scripts/: a.py  algorithm_manager.py  algorithm_wrapper.py  compare_algorithms.py  (+68 more)
(+95 files in other folders)
