<?xml version="1.0"?>
<package format="2">
  <name>my_gurdy_description</name>
  <version>0.0.0</version>
  <description>The my_gurdy_description package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for building messages -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies for running -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>

